new codes added

--- a/week_4_pytorch_tutorial.ipynb
+++ b/week_4_pytorch_tutorial.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-08-21T01:14:14.857956200Z",
-     "start_time": "2023-08-21T01:14:14.826684600Z"
+     "end_time": "2023-08-21T01:24:01.070350400Z",
+     "start_time": "2023-08-21T01:24:00.925382100Z"
     }
    },
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "dataset = np.loadtxt('pima-indians-diabetes.csv', delimiter=',')\n",
@@ -51,8 +51,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-21T01:14:14.904811900Z",
-     "start_time": "2023-08-21T01:14:14.842311300Z"
+     "end_time": "2023-08-21T01:24:01.070350400Z",
+     "start_time": "2023-08-21T01:24:00.945347900Z"
     }
    },
    "id": "6717ade40a01c2a5"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "X = torch.tensor(X, dtype=torch.float32)\n",
@@ -81,8 +81,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-21T01:14:14.904811900Z",
-     "start_time": "2023-08-21T01:14:14.857956200Z"
+     "end_time": "2023-08-21T01:24:01.070350400Z",
+     "start_time": "2023-08-21T01:24:00.960988600Z"
     }
    },
    "id": "69b32a33a54b1c"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -164,8 +164,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-21T01:14:14.904811900Z",
-     "start_time": "2023-08-21T01:14:14.873598100Z"
+     "end_time": "2023-08-21T01:24:01.070350400Z",
+     "start_time": "2023-08-21T01:24:00.976615400Z"
     }
    },
    "id": "4f389ced71064fba"
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "loss_fn = nn.BCELoss() # Binary cross entropy loss\n",
@@ -199,8 +199,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-21T01:14:14.904811900Z",
-     "start_time": "2023-08-21T01:14:14.889186100Z"
+     "end_time": "2023-08-21T01:24:01.070350400Z",
+     "start_time": "2023-08-21T01:24:00.992236Z"
     }
    },
    "id": "230b24185c49836d"
@@ -232,112 +232,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished epoch 0, latest loss 0.6111011505126953\n",
-      "Finished epoch 1, latest loss 0.5506048798561096\n",
-      "Finished epoch 2, latest loss 0.5479680299758911\n",
-      "Finished epoch 3, latest loss 0.5462202429771423\n",
-      "Finished epoch 4, latest loss 0.5351380109786987\n",
-      "Finished epoch 5, latest loss 0.5223537683486938\n",
-      "Finished epoch 6, latest loss 0.5195610523223877\n",
-      "Finished epoch 7, latest loss 0.5059084892272949\n",
-      "Finished epoch 8, latest loss 0.5092824697494507\n",
-      "Finished epoch 9, latest loss 0.5084242224693298\n",
-      "Finished epoch 10, latest loss 0.5107033848762512\n",
-      "Finished epoch 11, latest loss 0.5091471076011658\n",
-      "Finished epoch 12, latest loss 0.5129774808883667\n",
-      "Finished epoch 13, latest loss 0.5170820951461792\n",
-      "Finished epoch 14, latest loss 0.5171381235122681\n",
-      "Finished epoch 15, latest loss 0.5113753080368042\n",
-      "Finished epoch 16, latest loss 0.5145292282104492\n",
-      "Finished epoch 17, latest loss 0.5092077255249023\n",
-      "Finished epoch 18, latest loss 0.49967071413993835\n",
-      "Finished epoch 19, latest loss 0.504838228225708\n",
-      "Finished epoch 20, latest loss 0.49864527583122253\n",
-      "Finished epoch 21, latest loss 0.495563805103302\n",
-      "Finished epoch 22, latest loss 0.5035557746887207\n",
-      "Finished epoch 23, latest loss 0.4922219216823578\n",
-      "Finished epoch 24, latest loss 0.49489638209342957\n",
-      "Finished epoch 25, latest loss 0.481976181268692\n",
-      "Finished epoch 26, latest loss 0.4840907156467438\n",
-      "Finished epoch 27, latest loss 0.4794609546661377\n",
-      "Finished epoch 28, latest loss 0.4733390510082245\n",
-      "Finished epoch 29, latest loss 0.4785223603248596\n",
-      "Finished epoch 30, latest loss 0.46192467212677\n",
-      "Finished epoch 31, latest loss 0.47067469358444214\n",
-      "Finished epoch 32, latest loss 0.4630124568939209\n",
-      "Finished epoch 33, latest loss 0.46493369340896606\n",
-      "Finished epoch 34, latest loss 0.46517834067344666\n",
-      "Finished epoch 35, latest loss 0.46656668186187744\n",
-      "Finished epoch 36, latest loss 0.45516037940979004\n",
-      "Finished epoch 37, latest loss 0.46100449562072754\n",
-      "Finished epoch 38, latest loss 0.46118929982185364\n",
-      "Finished epoch 39, latest loss 0.46926888823509216\n",
-      "Finished epoch 40, latest loss 0.452389657497406\n",
-      "Finished epoch 41, latest loss 0.45867887139320374\n",
-      "Finished epoch 42, latest loss 0.46677976846694946\n",
-      "Finished epoch 43, latest loss 0.44143205881118774\n",
-      "Finished epoch 44, latest loss 0.46402716636657715\n",
-      "Finished epoch 45, latest loss 0.4539046883583069\n",
-      "Finished epoch 46, latest loss 0.4423571527004242\n",
-      "Finished epoch 47, latest loss 0.453728049993515\n",
-      "Finished epoch 48, latest loss 0.4435175359249115\n",
-      "Finished epoch 49, latest loss 0.44629716873168945\n",
-      "Finished epoch 50, latest loss 0.4552786946296692\n",
-      "Finished epoch 51, latest loss 0.43588826060295105\n",
-      "Finished epoch 52, latest loss 0.4460691809654236\n",
-      "Finished epoch 53, latest loss 0.43184393644332886\n",
-      "Finished epoch 54, latest loss 0.4305822253227234\n",
-      "Finished epoch 55, latest loss 0.42575687170028687\n",
-      "Finished epoch 56, latest loss 0.4285318851470947\n",
-      "Finished epoch 57, latest loss 0.4217849373817444\n",
-      "Finished epoch 58, latest loss 0.4153526723384857\n",
-      "Finished epoch 59, latest loss 0.40678873658180237\n",
-      "Finished epoch 60, latest loss 0.4240858256816864\n",
-      "Finished epoch 61, latest loss 0.41607585549354553\n",
-      "Finished epoch 62, latest loss 0.4091089069843292\n",
-      "Finished epoch 63, latest loss 0.42664456367492676\n",
-      "Finished epoch 64, latest loss 0.4078558683395386\n",
-      "Finished epoch 65, latest loss 0.4102252721786499\n",
-      "Finished epoch 66, latest loss 0.39777126908302307\n",
-      "Finished epoch 67, latest loss 0.4065198004245758\n",
-      "Finished epoch 68, latest loss 0.3949474096298218\n",
-      "Finished epoch 69, latest loss 0.40239641070365906\n",
-      "Finished epoch 70, latest loss 0.39046940207481384\n",
-      "Finished epoch 71, latest loss 0.3917402923107147\n",
-      "Finished epoch 72, latest loss 0.3875024914741516\n",
-      "Finished epoch 73, latest loss 0.3822574317455292\n",
-      "Finished epoch 74, latest loss 0.3836000859737396\n",
-      "Finished epoch 75, latest loss 0.3891448974609375\n",
-      "Finished epoch 76, latest loss 0.3749900460243225\n",
-      "Finished epoch 77, latest loss 0.3846006989479065\n",
-      "Finished epoch 78, latest loss 0.3724671006202698\n",
-      "Finished epoch 79, latest loss 0.3847501873970032\n",
-      "Finished epoch 80, latest loss 0.37914445996284485\n",
-      "Finished epoch 81, latest loss 0.37892869114875793\n",
-      "Finished epoch 82, latest loss 0.37198418378829956\n",
-      "Finished epoch 83, latest loss 0.3668607473373413\n",
-      "Finished epoch 84, latest loss 0.3822786509990692\n",
-      "Finished epoch 85, latest loss 0.37926602363586426\n",
-      "Finished epoch 86, latest loss 0.3751007914543152\n",
-      "Finished epoch 87, latest loss 0.37155887484550476\n",
-      "Finished epoch 88, latest loss 0.37015917897224426\n",
-      "Finished epoch 89, latest loss 0.3694930374622345\n",
-      "Finished epoch 90, latest loss 0.36629632115364075\n",
-      "Finished epoch 91, latest loss 0.36704719066619873\n",
-      "Finished epoch 92, latest loss 0.366792231798172\n",
-      "Finished epoch 93, latest loss 0.3672466576099396\n",
-      "Finished epoch 94, latest loss 0.36391252279281616\n",
-      "Finished epoch 95, latest loss 0.36395642161369324\n",
-      "Finished epoch 96, latest loss 0.36333349347114563\n",
-      "Finished epoch 97, latest loss 0.356317400932312\n",
-      "Finished epoch 98, latest loss 0.36073943972587585\n",
-      "Finished epoch 99, latest loss 0.36244910955429077\n"
+      "Finished epoch 0, latest loss 0.720002293586731\n",
+      "Finished epoch 1, latest loss 0.6318121552467346\n",
+      "Finished epoch 2, latest loss 0.5860861539840698\n",
+      "Finished epoch 3, latest loss 0.5649712085723877\n",
+      "Finished epoch 4, latest loss 0.5422816276550293\n",
+      "Finished epoch 5, latest loss 0.5299890637397766\n",
+      "Finished epoch 6, latest loss 0.5078116059303284\n",
+      "Finished epoch 7, latest loss 0.49606218934059143\n",
+      "Finished epoch 8, latest loss 0.491299033164978\n",
+      "Finished epoch 9, latest loss 0.48608070611953735\n",
+      "Finished epoch 10, latest loss 0.4817586839199066\n",
+      "Finished epoch 11, latest loss 0.46700331568717957\n",
+      "Finished epoch 12, latest loss 0.46342021226882935\n",
+      "Finished epoch 13, latest loss 0.46239715814590454\n",
+      "Finished epoch 14, latest loss 0.4537091553211212\n",
+      "Finished epoch 15, latest loss 0.44400814175605774\n",
+      "Finished epoch 16, latest loss 0.44801321625709534\n",
+      "Finished epoch 17, latest loss 0.4469354748725891\n",
+      "Finished epoch 18, latest loss 0.4423390030860901\n",
+      "Finished epoch 19, latest loss 0.4378354251384735\n",
+      "Finished epoch 20, latest loss 0.43231141567230225\n",
+      "Finished epoch 21, latest loss 0.42896512150764465\n",
+      "Finished epoch 22, latest loss 0.42966175079345703\n",
+      "Finished epoch 23, latest loss 0.4312620460987091\n",
+      "Finished epoch 24, latest loss 0.4227351248264313\n",
+      "Finished epoch 25, latest loss 0.42386123538017273\n",
+      "Finished epoch 26, latest loss 0.4216931462287903\n",
+      "Finished epoch 27, latest loss 0.41449427604675293\n",
+      "Finished epoch 28, latest loss 0.413856565952301\n",
+      "Finished epoch 29, latest loss 0.416305273771286\n",
+      "Finished epoch 30, latest loss 0.4131644368171692\n",
+      "Finished epoch 31, latest loss 0.41368740797042847\n",
+      "Finished epoch 32, latest loss 0.41548821330070496\n",
+      "Finished epoch 33, latest loss 0.4138196110725403\n",
+      "Finished epoch 34, latest loss 0.4124675393104553\n",
+      "Finished epoch 35, latest loss 0.411369651556015\n",
+      "Finished epoch 36, latest loss 0.4123968183994293\n",
+      "Finished epoch 37, latest loss 0.40850114822387695\n",
+      "Finished epoch 38, latest loss 0.41243985295295715\n",
+      "Finished epoch 39, latest loss 0.41003987193107605\n",
+      "Finished epoch 40, latest loss 0.40902912616729736\n",
+      "Finished epoch 41, latest loss 0.4102267920970917\n",
+      "Finished epoch 42, latest loss 0.4073637127876282\n",
+      "Finished epoch 43, latest loss 0.4060705602169037\n",
+      "Finished epoch 44, latest loss 0.4078921675682068\n",
+      "Finished epoch 45, latest loss 0.4058432877063751\n",
+      "Finished epoch 46, latest loss 0.40852341055870056\n",
+      "Finished epoch 47, latest loss 0.40577220916748047\n",
+      "Finished epoch 48, latest loss 0.40482667088508606\n",
+      "Finished epoch 49, latest loss 0.40438345074653625\n",
+      "Finished epoch 50, latest loss 0.4049835205078125\n",
+      "Finished epoch 51, latest loss 0.4055997133255005\n",
+      "Finished epoch 52, latest loss 0.40572383999824524\n",
+      "Finished epoch 53, latest loss 0.40273943543434143\n",
+      "Finished epoch 54, latest loss 0.4037661850452423\n",
+      "Finished epoch 55, latest loss 0.403629332780838\n",
+      "Finished epoch 56, latest loss 0.4034527540206909\n",
+      "Finished epoch 57, latest loss 0.4015013873577118\n",
+      "Finished epoch 58, latest loss 0.4036732017993927\n",
+      "Finished epoch 59, latest loss 0.40026336908340454\n",
+      "Finished epoch 60, latest loss 0.39844948053359985\n",
+      "Finished epoch 61, latest loss 0.4009857773780823\n",
+      "Finished epoch 62, latest loss 0.39527028799057007\n",
+      "Finished epoch 63, latest loss 0.39997971057891846\n",
+      "Finished epoch 64, latest loss 0.4007056653499603\n",
+      "Finished epoch 65, latest loss 0.39643019437789917\n",
+      "Finished epoch 66, latest loss 0.3973892629146576\n",
+      "Finished epoch 67, latest loss 0.3945621848106384\n",
+      "Finished epoch 68, latest loss 0.3938758671283722\n",
+      "Finished epoch 69, latest loss 0.3967176079750061\n",
+      "Finished epoch 70, latest loss 0.39392954111099243\n",
+      "Finished epoch 71, latest loss 0.3966119587421417\n",
+      "Finished epoch 72, latest loss 0.39530396461486816\n",
+      "Finished epoch 73, latest loss 0.3990713059902191\n",
+      "Finished epoch 74, latest loss 0.3974071741104126\n",
+      "Finished epoch 75, latest loss 0.39727625250816345\n",
+      "Finished epoch 76, latest loss 0.3967018723487854\n",
+      "Finished epoch 77, latest loss 0.3934769034385681\n",
+      "Finished epoch 78, latest loss 0.3961690068244934\n",
+      "Finished epoch 79, latest loss 0.3901293873786926\n",
+      "Finished epoch 80, latest loss 0.39286503195762634\n",
+      "Finished epoch 81, latest loss 0.39272117614746094\n",
+      "Finished epoch 82, latest loss 0.38477402925491333\n",
+      "Finished epoch 83, latest loss 0.39183562994003296\n",
+      "Finished epoch 84, latest loss 0.3857418894767761\n",
+      "Finished epoch 85, latest loss 0.3914504051208496\n",
+      "Finished epoch 86, latest loss 0.3850080370903015\n",
+      "Finished epoch 87, latest loss 0.3908264935016632\n",
+      "Finished epoch 88, latest loss 0.3818730115890503\n",
+      "Finished epoch 89, latest loss 0.3900781273841858\n",
+      "Finished epoch 90, latest loss 0.38455209136009216\n",
+      "Finished epoch 91, latest loss 0.387396901845932\n",
+      "Finished epoch 92, latest loss 0.3834612965583801\n",
+      "Finished epoch 93, latest loss 0.3860328793525696\n",
+      "Finished epoch 94, latest loss 0.3747316598892212\n",
+      "Finished epoch 95, latest loss 0.38536959886550903\n",
+      "Finished epoch 96, latest loss 0.3767986297607422\n",
+      "Finished epoch 97, latest loss 0.38652485609054565\n",
+      "Finished epoch 98, latest loss 0.374725341796875\n",
+      "Finished epoch 99, latest loss 0.3824104964733124\n"
      ]
     }
    ],
@@ -359,11 +359,122 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-21T01:14:19.139737400Z",
-     "start_time": "2023-08-21T01:14:14.904811900Z"
+     "end_time": "2023-08-21T01:24:05.953140200Z",
+     "start_time": "2023-08-21T01:24:01.007871200Z"
     }
    },
    "id": "f080ba2ef175e4c8"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ab481f99c0202994"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You have trained our neural network on the entire dataset, and you can evaluate the\n",
+    "performance of the network on the same dataset. This will o nly give you an idea of how well\n",
+    "you have modeled the dataset (e.g., train accuracy) but no idea of how well the algorithm\n",
+    "might perform on new data. This was done for simplicity, but ideally, you could separate\n",
+    "your data into train and test datasets for t raining and evaluation of your model.\n",
+    "You can evaluate your model on your training dataset in the same way you invoked the\n",
+    "model in training. This will generate predictions for each input, but then you still need to\n",
+    "compute a score for the evaluation. This score can be the same as your loss function or\n",
+    "something different. Because you are doing binary classification, you can use accuracy as\n",
+    "your evaluation score by converting the output (a floating point in the range of 0 to 1) to an\n",
+    "integer (0 or 1) and co mpare to the label we know."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d0912fb8e208bf85"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Compute the accuracy `no_grad()` is optional"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "efb72b9caac94d50"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.734375\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model(X)\n",
+    "accuracy = (y_pred.round() == y).float().mean()\n",
+    "print(f\"Accuracy {accuracy}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-21T01:24:42.161537700Z",
+     "start_time": "2023-08-21T01:24:42.145896Z"
+    }
+   },
+   "id": "ff744d0acc5b9226"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.0, 148.0, 72.0, 35.0, 0.0, 33.599998474121094, 0.6269999742507935, 50.0] => 1 (expected 1)\n",
+      "[1.0, 85.0, 66.0, 29.0, 0.0, 26.600000381469727, 0.35100001096725464, 31.0] => 0 (expected 0)\n",
+      "[8.0, 183.0, 64.0, 0.0, 0.0, 23.299999237060547, 0.671999990940094, 32.0] => 1 (expected 1)\n",
+      "[1.0, 89.0, 66.0, 23.0, 94.0, 28.100000381469727, 0.16699999570846558, 21.0] => 0 (expected 0)\n",
+      "[0.0, 137.0, 40.0, 35.0, 168.0, 43.099998474121094, 2.2880001068115234, 33.0] => 1 (expected 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make class predictions with the model\n",
+    "predictions = (model(X) > 0.5).int()\n",
+    "for i in range(5):\n",
+    "    print('%s => %d (expected %d)' % (X[i].tolist(), predictions[i], y[i]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-21T01:25:22.472155100Z",
+     "start_time": "2023-08-21T01:25:22.456533500Z"
+    }
+   },
+   "id": "8b1e4b25d347d58e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6b34bae911cd2a35"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2c54984ec8ce8b47"
   }
  ],
  "metadata": {
